fix for management button spacing

--- a/designer/server/src/common/components/form-card/_form-card.scss
+++ b/designer/server/src/common/components/form-card/_form-card.scss
@@ -5,7 +5,6 @@
 
 .app-form-card .govuk-button {
   width: 100%;
-  margin-bottom: govuk-spacing(3);
 }
 
 .app-form-card :last-child {
